# zenovasolution

./: .env.example  .gitignore  DEPLOY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: backend.yml  deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_project_live_url.py  0003_add_user_role.py  0004_add_client_projects.py  0005_add_jobs.py  0007_add_blog_and_seo_pages.py
backend/app/: __init__.py  config.py  db.py  deps.py  errors.py  limiter.py  logging.py  main.py  middleware.py  models.py  netutil.py  schemas.py  security.py  storage.py
backend/app/routers/: auth.py  blog.py  brand.py  client_project.py  contact.py  content.py  jobs.py  projects.py  public.py  seo_pages.py  services.py  team.py  uploads.py  users.py
backend/scripts/: create_admin.py  create_admin_direct.py  seed.py  seed_blog.py
backend/scripts/seed_data/: brand.json  client_project.json  content.json  jobs.json  projects.json  services.json  team.json
backend/tests/: conftest.py  test_auth.py  test_blog.py  test_contact.py  test_health.py  test_seo_pages.py  test_users.py
public/: 404.html  llms.txt
src/: App.tsx  main.tsx
src/admin/: AdminRoutes.tsx  admin.css  leadsApi.ts  store.ts  usersApi.ts
src/client/: ClientRoutes.tsx  store.ts
src/config/: tweaks.ts
src/data/: pricing.ts  projects.ts  services.ts
src/dev/: TweaksPanel.tsx  ZenovaTweaks.tsx  (+1 more)
(+143 files in other folders)
