[project]
name = "zenova-backend"
version = "0.1.0"
description = "Zenova FastAPI backend — admin + public content API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "PyJWT>=2.10",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.20",
  "boto3>=1.35",
  "structlog>=24.4",
  "slowapi>=0.1.9",
  "httpx>=0.28",
  "orjson>=3.10",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "A", "C4", "T20", "SIM"]
ignore = ["S101", "B008"]  # asserts in tests, FastAPI Depends in default args

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
